--- a/kubernetes/08/student-stack.yml
+++ b/kubernetes/08/student-stack.yml
@@ -1,16 +1,54 @@
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: stack 
+  name: stack
 spec:
-  containers:
-    - name: mariadb 
-      image: mariadb
-      env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: root
+  # modify replicas according to your case
+  replicas: 1
+  selector:
+    matchLabels:
+      PROJ: student
+  template:
+    metadata:
+      labels:
+        PROJ: student
+    spec:
+      containers:
+        - name: mariadb 
+          image: mariadb
+          volumeMounts:
+          - mountPath: /var/lib/mysql
+            name: dbvolume
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: root
 
-    - name: studentapp
-      image: raghudevops29/student:v2 
-      imagePullPolicy: Always 
+        - name: studentapp
+          image: raghudevops29/student:v3
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
+      volumes:
+      - name: dbvolume
+        gcePersistentDisk:
+          pdName: mariadb-disk
+          fsType: ext4
+...
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: web-svc
+spec:
+  type: LoadBalancer
+  selector:
+    PROJ: student
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+... 
+
+
